--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,11 @@ node_modules/
 # Virtual environment
 # --------------------------------------------------
 venv/
+
+# --------------------------------------------------
+# Archives
+# --------------------------------------------------
+*.zip
+*.tar.gz
+*.rar
+*.7z
