Add Docker Compose and Jenkins pipeline for CI

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,4 @@
-# --------------------------------------------------
-# Java / Compilation
-# --------------------------------------------------
+------------------------------------------------
 out/
 build/
 target/
@@ -57,3 +55,48 @@ venv/
 *.tar.gz
 *.rar
 *.7z
+# --------------------------------------------------
+# Python
+# --------------------------------------------------
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+.pytest_cache/
+.mypy_cache/
+
+# --------------------------------------------------
+# IDE / Editors
+# --------------------------------------------------
+.idea/
+.vscode/
+*.iml
+
+# --------------------------------------------------
+# Docker / CI
+# --------------------------------------------------
+# Docker volumes / runtime data (DO NOT COMMIT)
+mongo/
+docker/mongo/
+docker/volumes/
+**/data/db/
+
+# --------------------------------------------------
+# Environment variables
+# --------------------------------------------------
+.env
+.env.*
+!.env.example
+
+# --------------------------------------------------
+# Jenkins local / CI artifacts
+# --------------------------------------------------
+.jenkins/
+jenkins_home/
+
+# --------------------------------------------------
+# Coverage / reports
+# --------------------------------------------------
+coverage/
+*.lcov
+*.exec
