--- a/.gitignore
+++ b/.gitignore
@@ -100,3 +100,9 @@ jenkins_home/
 coverage/
 *.lcov
 *.exec
+
+# --------------------------------------------------
+# Arduino
+# --------------------------------------------------
+arduino/**/build/
+arduino/**/.pio/
