--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,6 +49,8 @@ services:
       - api
     ports:
       - "8080:80"
+    environment:
+    - VITE_API_BASE_URL=http://api:4567/trackrapi
 
 volumes:
   mongo-data:
