--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,7 +50,7 @@ services:
     ports:
       - "8080:80"
     environment:
-    - VITE_API_BASE_URL=http://api:4567/trackrapi
+    - VITE_API_BASE_URL=http://trackr-api:4567/trackrapi
 
 volumes:
   mongo-data:
