--- a/WebTrackr/Dockerfile
+++ b/WebTrackr/Dockerfile
@@ -1,13 +1,19 @@
-# Build stage
+# ---------- Build ----------
 FROM node:20 AS build
 
 WORKDIR /app
+
+# argument Vite
+ARG VITE_API_BASE_URL
+ENV VITE_API_BASE_URL=${VITE_API_BASE_URL}
+
 COPY package*.json ./
 RUN npm install
 COPY . .
+
 RUN npm run build
 
-# Production stage
+# ---------- Production ----------
 FROM nginx:alpine
 
 COPY --from=build /app/dist /usr/share/nginx/html
