--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,15 +42,16 @@ services:
       - CENTRAL_PORT=9000
 
   frontend:
-    build: ./WebTrackr
+    build:
+      context: ./WebTrackr
+      args:
+        VITE_API_BASE_URL: http://trackr-api:4567/trackrapi
     container_name: trackr-frontend
     restart: unless-stopped
     depends_on:
       - api
     ports:
       - "8080:80"
-    environment:
-    - VITE_API_BASE_URL=http://trackr-api:4567/trackrapi
-
+      
 volumes:
   mongo-data:
