--- a/WebTrackr/Dockerfile
+++ b/WebTrackr/Dockerfile
@@ -1,16 +1,20 @@
-# Build stage
+# ---------- Build ----------
 FROM node:20 AS build
 
 WORKDIR /app
+ARG VITE_API_BASE_URL
+ENV VITE_API_BASE_URL=${VITE_API_BASE_URL}
+
 COPY package*.json ./
 RUN npm install
 COPY . .
 RUN npm run build
 
-# Production stage
+# ---------- Production ----------
 FROM nginx:alpine
 
+COPY nginx.conf /etc/nginx/conf.d/default.conf
 COPY --from=build /app/dist /usr/share/nginx/html
-EXPOSE 80
 
+EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
