--- a/TrackrAPI/package.json
+++ b/TrackrAPI/package.json
@@ -24,7 +24,9 @@
     "validator": "^13.6.0"
   },
   "scripts": {
-    "test": "node geseapi"
+    "test": "node geseapi",
+    "dev": "nodemon TrackrAPI.js",
+    "start": "node TrackrAPI.js"
   },
   "repository": {
     "type": "git",
@@ -37,6 +39,7 @@
   },
   "homepage": "https://gitlab.com/hervald/geseapi#readme",
   "devDependencies": {
-    "body-parser": "^1.20.2"
+    "body-parser": "^1.20.2",
+    "nodemon": "^3.1.11"
   }
 }
