--- a/TrackrAPI/.env
+++ b/TrackrAPI/.env
@@ -1,4 +1,4 @@
 PORT=4567
 MONGO_URL=mongodb://localhost:27017/trackrai
-CENTRAL_HOST=192.168.31.101
+CENTRAL_HOST=host.docker.internal
 CENTRAL_PORT=9000
