--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -15,6 +15,8 @@ services:
     environment:
       - MONGODB_URL=mongodb://mongo:27017/trackrai
       - PORT=4567
+      - CENTRAL_HOST=host.docker.internal
+      - CENTRAL_PORT=9000
     ports:
       - "4567:4567"
     depends_on:
