--- a/WebTrackr/nginx.conf
+++ b/WebTrackr/nginx.conf
@@ -8,10 +8,21 @@ server {
     }
 
     location /trackrapi/ {
-        proxy_pass http://trackr-api:4567/trackrapi/;
+        proxy_pass http://trackr-api:4567;
         proxy_http_version 1.1;
+
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+
+        proxy_request_buffering off;
+        proxy_buffering off;
+
+        client_max_body_size 5m;
+
+        proxy_read_timeout 300;
+        proxy_connect_timeout 300;
+        proxy_send_timeout 300;
     }
 }
