--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -6,12 +6,12 @@ services:
     ports:
       - "27017:27017"
 
-  api:
+  trackr-api:
     image: node:20
     working_dir: /app
     volumes:
       - ./TrackrAPI:/app
-    command: sh -c "npm install && npm run dev"
+    command: npm run dev
     environment:
       - MONGODB_URL=mongodb://mongo:27017/trackrai
       - PORT=4567
@@ -23,17 +23,15 @@ services:
       - mongo
 
   frontend:
-    image: node:20
-    working_dir: /app
-    volumes:
-      - ./WebTrackr:/app
-    command: sh -c "npm install && npm run dev -- --host"
-    environment:
-      - VITE_API_BASE_URL=http://localhost:4567/trackrapi
-    ports:
-      - "5173:5173"
+    build:
+      context: ./WebTrackr
+      args:
+        VITE_API_BASE_URL: /trackrapi
+    container_name: trackr-frontend
     depends_on:
-      - api
+      - trackr-api
+    ports:
+      - "8080:80"
 
 volumes:
   mongo-data:
