--- a/WebTrackr/package.json
+++ b/WebTrackr/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.13.2",
     "chart.js": "^4.5.1",
+    "chartjs-adapter-date-fns": "^3.0.0",
     "leaflet": "^1.9.4",
     "pinia": "^3.0.4",
     "vue": "^3.5.24",
