--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -23,15 +23,15 @@ services:
       - mongo
 
   frontend:
-    build:
-      context: ./WebTrackr
-      args:
-        VITE_API_BASE_URL: /trackrapi
-    container_name: trackr-frontend
-    depends_on:
-      - trackr-api
+    image: node:20
+    working_dir: /app
+    volumes:
+      - ./WebTrackr:/app
+    command: npm run dev -- --host 0.0.0.0
+    environment:
+      - VITE_API_BASE_URL=/trackrapi
     ports:
-      - "8080:80"
+      - "5173:5173"
 
 volumes:
   mongo-data:
