--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -11,7 +11,8 @@ services:
     working_dir: /app
     volumes:
       - ./TrackrAPI:/app
-    command: npm run dev
+      - /app/node_modules
+    command: sh -c "npm install && npm run dev"
     environment:
       - MONGODB_URL=mongodb://mongo:27017/trackrai
       - PORT=4567
@@ -22,14 +23,30 @@ services:
     depends_on:
       - mongo
 
+  analyze:
+    image: python:3.11
+    working_dir: /app
+    volumes:
+      - ./AnalyzeServer:/app
+    command: sh -c "pip install -r requirements.txt && python main.py"
+    environment:
+      - CENTRAL_HOST=host.docker.internal
+      - CENTRAL_PORT=9000
+    ports:
+      - "6000:6000"
+    depends_on:
+      - trackr-api
+
   frontend:
     image: node:20
     working_dir: /app
     volumes:
       - ./WebTrackr:/app
-    command: npm run dev -- --host 0.0.0.0
+      - /app/node_modules
+    command: sh -c "npm install && npm run dev -- --host 0.0.0.0"
     environment:
       - VITE_API_BASE_URL=/trackrapi
+      - VITE_ANALYZE_WS_URL=ws://localhost:6000
     ports:
       - "5173:5173"
 
