--- a/WebTrackr/nginx.conf
+++ b/WebTrackr/nginx.conf
@@ -1,12 +1,18 @@
 server {
     listen 80;
 
+    # =========================
+    # Front SPA (Vue / Vite build)
+    # =========================
     location / {
         root /usr/share/nginx/html;
         index index.html;
         try_files $uri $uri/ /index.html;
     }
 
+    # =========================
+    # API Node (REST)
+    # =========================
     location /trackrapi/ {
         proxy_pass http://trackr-api:4567;
         proxy_http_version 1.1;
@@ -19,10 +25,25 @@ server {
         proxy_request_buffering off;
         proxy_buffering off;
 
-        client_max_body_size 5m;
+        client_max_body_size 20m;
 
         proxy_read_timeout 300;
         proxy_connect_timeout 300;
         proxy_send_timeout 300;
+    }
+
+    # =========================
+    # WebSocket Analyse Vidéo
+    # =========================
+    location /ws {
+        proxy_pass http://trackr-analyze:6000;
+        proxy_http_version 1.1;
+
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "Upgrade";
+        proxy_set_header Host $host;
+
+        proxy_read_timeout 3600;
+        proxy_send_timeout 3600;
     }
 }
