Correction autoregister esp32, ajout stats dans model session afin d'enregistrer le filtrage des stats tps reel dans un session afin de les afficher, changement dans les vues par session.stats, ajout d'utils dans l'api pour faire le filtrage mais utilisation encore au niveau du front pour le live

--- a/TrackrAPI/.env
+++ b/TrackrAPI/.env
@@ -1,4 +1,4 @@
 PORT=4567
-MONGO_URL=mongodb://localhost:27017/trackrai
+MONGODB_URL=mongodb://localhost:27017/trackrai
 CENTRAL_HOST=host.docker.internal
 CENTRAL_PORT=9000
